--- a/vercel.json
+++ b/vercel.json
@@ -7,9 +7,10 @@
       "config": { "distDir": "dist" }
     }
   ],
-  "routes": [
-    { "src": "/(.*)", "dest": "/index.html" }
-  ],
+  "routes": [{ "src": "/(.*)", "dest": "/index.html" }],
   "installCommand": "npm ci --include=dev",
-  "buildCommand": "npm run build"
+  "buildCommand": "npm run build",
+  "env": {
+    "NPM_FLAGS": "--include=dev"
+  }
 }
