ci: Add vercel-build script to ensure dev deps installed during Vercel build

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
+    "vercel-build": "npm ci --include=dev && npm run build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
