--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@react-three/drei": "^8.0.0",
     "@react-three/fiber": "^8.0.0",
+    "@tanstack/react-query": "^5.62.3",
+    "axios": "^1.7.9",
     "framer-motion": "^7.9.0",
     "howler": "^2.2.3",
     "react": "^18.2.0",
@@ -44,6 +46,6 @@
     "tailwindcss": "^3.4.17",
     "typescript": "^5.6.3",
     "typescript-eslint": "^8.46.4",
-    "vite": "^5.4.17"
+    "vite": "^7.2.7"
   }
 }
