--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -12,13 +12,15 @@
   "dependencies": {
     "@react-three/drei": "^8.0.0",
     "@react-three/fiber": "^8.0.0",
+    "@supabase/supabase-js": "^2.87.1",
     "@tanstack/react-query": "^5.62.3",
     "axios": "^1.7.9",
     "framer-motion": "^7.9.0",
     "howler": "^2.2.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-router-dom": "^6.13.0",
+    "sonner": "^2.0.7",
     "three": "0.150.1",
     "troika-three-text": "^0.52.4",
     "troika-three-utils": "^0.52.4",
@@ -33,8 +35,8 @@
     "@eslint/js": "^9.39.1",
     "@types/howler": "^2.2.12",
     "@types/node": "^20.9.4",
-    "@types/react": "^18.2.21",
-    "@types/react-dom": "^18.2.6",
+    "@types/react": "^18.3.10",
+    "@types/react-dom": "^18.3.0",
     "@types/uuid": "^10.0.0",
     "@vitejs/plugin-react": "^5.1.1",
     "autoprefixer": "^10.4.14",
